# jarvas-desktop

./: .gitignore  README.md  SMOKE-TEST.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
