[package]
name = "jarvas-desktop"
version = "0.1.0"
description = "Jarvas Desktop — cliente nativo (thin client) para Windows"
authors = ["Wesley Melo"]
edition = "2021"
rust-version = "1.77.2"

# O binário usa a lib; assim a lógica fica testável (cargo test).
[lib]
name = "jarvas_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Release menor/silencioso no Windows.
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
